# CRYOMODEL

./: .gitignore  ASSISTANT_GUIDE.md  BASEHUNTER_IMPLEMENTATION.md  BASEHUNTER_TEMPLATES.md  CODEBASE_SUMMARY.md  CRYOMODEL_USER_GUIDE.md  FITCHECK_PORT.md  INSTALL.md  LICENSE  ML_IMPROVEMENTS.md  PATHWALKER2_DESIGN.md  PATHWALKER_IMPACT.md  PATHWALKER_PORT.md  QUICK_REFERENCE.md  README.md  TOOLS_PORT.md  WORKFLOW_GUIDE.md  assigns.json  dna_workflow_ui_demo.html  pathmeasure_demo.html  pyproject.toml  test_extract_features.py  wpa_converter.py
chimerax-bundles/crymodel/: INSTALL_WHEEL.txt  bundle_info.xml  fix_wheel_metadata.py  license.txt  pyproject.toml
chimerax-bundles/crymodel/src/: __init__.py  pdbdomain_tool.py
chimerax-bundles/crymodel/src/chimerax/cryomodel/: __init__.py  pdbdomain_tool.py
crymodel/: .pre-commit-config.yaml  CONTRIBUTING.md  ruff.toml
crymodel/alphafold/: __init__.py  affilter.py
crymodel/assistant/: __init__.py  assistant.py  knowledge_base.py
crymodel/backends/: __init__.py  base.py  lite.py
crymodel/cli/: __init__.py  affilter.py  assistant.py  basehunter.py  command_log.py  dnaaxis.py  dnabuild.py  extract_features.py  findligands.py  fitcompare.py  fitprep.py  foldhunter.py  logs.py  loopcloud.py  mapfilter.py  pathmeasure.py  pathwalk.py  pathwalker2.py  pdbcom.py  pdbdomain.py  predictligands.py  pyhole.py  pyhole_plot.py  train_ensemble.py  train_ml.py  validate.py  version.py  workflow.py  workflow_ui.py
crymodel/compare/: __init__.py  fitcompare.py
crymodel/core/: untitled 4.txt
crymodel/datasets/: sim_em.py
crymodel/domains/: __init__.py  domain_identifier.py  (+1 more)
docs/: JOB_RESOLVER_UI_NOTES.md
examples/: base_pairs_with_thresholds.txt
extra-files/: featureizer.py  model.py  predict_env_classifier.py  train_env_classifier.py
tests/: test_cli_schema.py  test_import.py  test_job_resolver.py
(+77 files in other folders)
